bug: gear icon not showing on the playground settings button

--- a/demos/playground/src/index.css
+++ b/demos/playground/src/index.css
@@ -172,10 +172,6 @@ body {
   bottom: 20px;
 }
 
-#options-button::after {
-  background-image: url(images/icons/gear.svg);
-}
-
 #test-recorder-button::after {
   background-image: url(images/icons/journal-code.svg);
 }
